--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,9 @@
-name: test
+name: tests
 
 on:
+    push:
+        branches:
+            - master
     pull_request:
         branches:
             - master
