--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "catch-exit",
-    "version": "1.0.0",
-    "description": "Catch Node.js exit conditions, including errors and unhandled rejections, and fire callbacks.",
+    "version": "1.0.2",
+    "description": "Catch Node.js exit conditions, including errors and unhandled rejections.",
     "license": "MIT",
     "repository": {
         "type": "git",
@@ -38,17 +38,18 @@
     ],
     "main": "dist/src/index.js",
     "scripts": {
-        "prepublishOnly": "npm install && npm run test-compile && tsc",
+        "compile": "tsc",
+        "prepublishOnly": "npm install && npm run test && npm run spellcheck && rm -rf dist && npm run compile",
         "spellcheck": "cspell \"src/**/*.ts\" \"test/**/*.ts\" README.md LICENSE package.json",
-        "test": "npm run spellcheck && node dist/test/run-tests.js",
-        "test-compile": "rm -rf dist && tsc && npm test"
+        "test": "ts-node test/run-tests.ts"
     },
     "dependencies": {
-        "cspell": "^4.0.55",
-        "human-signals": "^2.0.0",
-        "typescript": "^3.8.3"
+        "human-signals": "2.1.0"
     },
     "devDependencies": {
-        "@types/node": "^13.7.7"
+        "@types/node": "^13.11.1",
+        "cspell": "4.0.55",
+        "ts-node": "8.8.2",
+        "typescript": "3.8.3"
     }
 }
