--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,4 +25,4 @@ jobs:
             - name: run test
               run: |
                   npm ci
-                  npm run test-compile
+                  npm run test
