--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,14 @@
 {
     "compilerOptions": {
+        "alwaysStrict": true,
         "declaration": true,
+        "forceConsistentCasingInFileNames": true,
         "module": "commonjs",
+        "noEmitOnError": true,
+        "noImplicitAny": true,
         "noImplicitReturns": true,
+        "noImplicitThis": true,
+        "noUncheckedIndexedAccess": true,
         "outDir": "dist",
         "strict": true,
         "target": "es6"
