--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "catch-exit",
-    "version": "1.1.0",
+    "version": "1.2.0",
     "description": "Catch Node.js exit conditions, including errors and unhandled rejections.",
     "keywords": [
         "catch",
@@ -38,22 +38,18 @@
     },
     "main": "dist/src/index.js",
     "scripts": {
-        "compile": "rm -rf dist && tsc",
-        "prepublishOnly": "npm install && npm run test && rm -rf dist && npm run compile",
-        "spellcheck": "cspell \"src/**/*.ts\" \"test/**/*.ts\" README.md LICENSE package.json",
-        "test": "npm run spellcheck && npm run compile && node dist/test/run-tests.js",
-        "format": "prettier --ignore-path .gitignore --write  \"./**/*.{ts,css,html,json}\""
+        "prepublishOnly": "npm run test:full",
+        "spellcheck": "virmator spellcheck --extendable-config",
+        "test": "virmator compile && node dist/test/run-tests.js",
+        "test:full": "npm test && npm run spellcheck && virmator format check",
+        "format": "virmator format write"
     },
     "dependencies": {
         "human-signals": "2.1.0"
     },
     "devDependencies": {
-        "@types/node": "^14.14.31",
-        "cspell": "5.3.3",
-        "prettier": "^2.2.1",
-        "prettier-plugin-organize-imports": "^1.1.1",
-        "prettier-plugin-packagejson": "^2.2.10",
-        "prettier-plugin-sort-json": "^0.0.2",
-        "typescript": "4.2.2"
+        "@types/node": "^16.7.4",
+        "typescript": "^4.4.2",
+        "virmator": "^1.0.5"
     }
 }
