--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "scripts": {
         "prepublishOnly": "npm run test:full",
         "spellcheck": "virmator spellcheck --extendable-config",
-        "test": "virmator compile && node dist/test/run-tests.js && virmator test",
+        "test": "virmator compile && virmator test",
         "test:full": "npm test && npm run spellcheck && virmator format check",
         "format": "virmator format write"
     },
