--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "catch-exit",
-    "version": "1.2.1",
+    "version": "1.2.2",
     "description": "Catch Node.js exit conditions, including errors and unhandled rejections.",
     "keywords": [
         "catch",
@@ -37,6 +37,7 @@
         "name": "electrovir"
     },
     "main": "dist/index.js",
+    "typings": "dist/index.d.ts",
     "scripts": {
         "prepublishOnly": "npm run test:full",
         "spellcheck": "virmator spellcheck --extendable-config",
@@ -52,6 +53,6 @@
         "@types/node": "^16.7.6",
         "fs-extra": "^10.0.0",
         "typescript": "^4.4.2",
-        "virmator": "^1.0.6"
+        "virmator": "^1.1.0"
     }
 }
