--- a/.npmignore
+++ b/.npmignore
@@ -1,10 +1,14 @@
-tsconfig.json
-.github
-src
-test
-dist/test/
 .cspell-base.json
 .cspell.json
 .gitattributes
+.github
+.gitignore
+.prettierignore
 .prettierrc.js
 .vscode
+*.test.d.ts
+*.test.js
+scripts
+src
+tsconfig.json
+dist/test
