update dev deps
Convert tests to Jest tests.
No need to publish update on npm, this is purely dev changes.

--- a/.npmignore
+++ b/.npmignore
@@ -1,14 +1,22 @@
 .cspell-base.json
 .cspell.json
 .gitattributes
-.github
+.github/
 .gitignore
 .prettierignore
 .prettierrc.js
-.vscode
+.virmator/
+.vscode/
 *.test.d.ts
 *.test.js
-scripts
-src
+*.test.ts
+dist/readme-examples/
+dist/scripts/
+dist/test/
+dist/vite/
+src/
+test-files/
+tsconfig-base.json
 tsconfig.json
-dist/test
+
+dist/file-paths.*
