--- a/package.json
+++ b/package.json
@@ -34,25 +34,24 @@
     },
     "license": "MIT",
     "author": {
-        "name": "electrovir"
+        "name": "electrovir",
+        "url": "https://github.com/electrovir"
     },
     "main": "dist/index.js",
     "typings": "dist/index.d.ts",
     "scripts": {
+        "format": "virmator format write",
         "prepublishOnly": "npm run test:full",
         "spellcheck": "virmator spellcheck --extendable-config",
-        "test": "virmator compile && virmator test",
-        "test:full": "npm test && npm run spellcheck && virmator format check",
-        "format": "virmator format write"
+        "test": "virmator compile && virmator test --runInBand",
+        "test:full": "npm test && npm run spellcheck && virmator format check"
     },
     "dependencies": {
         "human-signals": "2.1.0"
     },
     "devDependencies": {
-        "@types/fs-extra": "^9.0.12",
-        "@types/node": "^16.9.1",
-        "fs-extra": "^10.0.0",
-        "typescript": "^4.4.3",
-        "virmator": "^1.1.12"
+        "@types/node": "17.0.23",
+        "typescript": "4.6.3",
+        "virmator": "2.0.3"
     }
 }
