--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
         "format": "virmator format write",
         "prepublishOnly": "npm run test:full",
         "spellcheck": "virmator spellcheck --extendable-config",
-        "test": "virmator compile && virmator test --runInBand",
+        "test": "virmator compile && virmator test --runInBand --no-write-config",
         "test:full": "npm test && npm run spellcheck && virmator format check"
     },
     "dependencies": {
